[gd_scene load_steps=14 format=3 uid="uid://db6jpdfsocp68"]

[ext_resource type="Script" path="res://MainMenu/joke_picker.gd" id="1_l3ia7"]
[ext_resource type="PackedScene" uid="uid://doxto7vhpcuw7" path="res://MainMenu/joke_button.tscn" id="1_n1pko"]
[ext_resource type="Texture2D" uid="uid://cneo167a541l3" path="res://ChickenCrosser/chicken.png" id="3_v45wh"]
[ext_resource type="PackedScene" uid="uid://b4nmrvt3xmybg" path="res://ChickenCrosser/chicken.tscn" id="4_p4tjd"]
[ext_resource type="Texture2D" uid="uid://tbocv46oh888" path="res://FishTank/fish-asset/Realistic_Fish_Head_HD.png" id="5_002wc"]
[ext_resource type="PackedScene" uid="uid://b4lvn4of63iuh" path="res://FishTank/FishTank.tscn" id="6_7sfc6"]
[ext_resource type="Texture2D" uid="uid://dp2hxlxvesxt0" path="res://SpaceMan/space-sprites/Main Ship - Base - Full health.png" id="7_87v4y"]
[ext_resource type="Texture2D" uid="uid://b0tbu77wyo5ub" path="res://Meow-tain/catassets/Cat-1/Cat-1-Sitting.png" id="7_fuyih"]
[ext_resource type="PackedScene" uid="uid://w36g7jyh6bnb" path="res://SpaceMan/SpaceMan.tscn" id="9_m56wn"]
[ext_resource type="PackedScene" uid="uid://bibjcr2fyisnd" path="res://Meow-tain/meow_tain.tscn" id="9_u2tdk"]
[ext_resource type="Texture2D" uid="uid://bshkl0pbxoyvr" path="res://Wine/foot.png" id="11_igj0j"]
[ext_resource type="AudioStream" uid="uid://cufno2m7w7ldk" path="res://MainMenu/Dad_Rag.mp3" id="11_lylin"]
[ext_resource type="PackedScene" uid="uid://v0hubiwcfpbc" path="res://Wine/wine.tscn" id="12_p1phu"]

[node name="JokePicker" type="Node2D"]
script = ExtResource("1_l3ia7")

[node name="JokesBox" type="HFlowContainer" parent="."]
unique_name_in_owner = true
offset_right = 720.0
offset_bottom = 720.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="JokeButton" parent="JokesBox" instance=ExtResource("1_n1pko")]
layout_mode = 2
texture_normal = ExtResource("3_v45wh")
joke_packed_scene = ExtResource("4_p4tjd")

[node name="Label" type="Label" parent="JokesBox/JokeButton"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 30
text = "CLUCK HERE FOR A GOOD TIME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="JokeButton2" parent="JokesBox" instance=ExtResource("1_n1pko")]
layout_mode = 2
texture_normal = ExtResource("5_002wc")
stretch_mode = 1
joke_packed_scene = ExtResource("6_7sfc6")

[node name="Label" type="Label" parent="JokesBox/JokeButton2"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 30
text = "FISH TANK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JokeButton4" parent="JokesBox" instance=ExtResource("1_n1pko")]
layout_mode = 2
texture_normal = ExtResource("7_87v4y")
joke_packed_scene = ExtResource("9_m56wn")

[node name="Label" type="Label" parent="JokesBox/JokeButton4"]
layout_mode = 0
offset_right = 241.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 30
text = "Spaceman"
horizontal_alignment = 1

[node name="JokeButton3" parent="JokesBox" instance=ExtResource("1_n1pko")]
layout_mode = 2
texture_normal = ExtResource("7_fuyih")
joke_packed_scene = ExtResource("9_u2tdk")

[node name="Label" type="Label" parent="JokesBox/JokeButton3"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_right = 240.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 30
text = "Pile Of Cats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JokeButton5" parent="JokesBox" instance=ExtResource("1_n1pko")]
layout_mode = 2
texture_normal = ExtResource("11_igj0j")
stretch_mode = 5
joke_packed_scene = ExtResource("12_p1phu")

[node name="Label" type="Label" parent="JokesBox/JokeButton5"]
layout_mode = 0
offset_left = 43.0
offset_top = 104.0
offset_right = 205.0
offset_bottom = 146.0
theme_override_font_sizes/font_size = 30
text = "Whine not?"

[node name="YouWinScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 720.0
offset_bottom = 720.0

[node name="YouWinLabel" type="Label" parent="YouWinScreen"]
layout_mode = 0
offset_top = 306.0
offset_right = 720.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="YouWinScreen"]
layout_mode = 0
offset_left = 328.0
offset_top = 448.0
offset_right = 407.0
offset_bottom = 479.0
text = "Free Play"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_lylin")

[connection signal="pressed" from="YouWinScreen/Button" to="." method="enable_free_play"]
[connection signal="finished" from="BackgroundMusic" to="." method="replay_music"]
